# NLA-challenges

./: CMakeLists.txt  NLA-challenges  README.md  challenge.cpp
challenge-1/: README.md  main.cpp
challenge-1/resources/: hist.txt  result.txt  run_lis.sh  sol.mtx  sol.txt  w.mtx
challenge-1/src/: main.cpp
challenge-1/src/utils/: convert_utils.cpp  convert_utils.hpp  image_manipulation.cpp  image_manipulation.hpp  matrix_utils.cpp  matrix_utils.hpp
challenge-2/: README.md
challenge-2/resources/: eigvec.mtx  eigvec_shift.mtx  hist_shift.txt  result.txt  result_shift.txt  run_lis.sh  run_lis_shift.sh
challenge-2/src/: challenge_2-main.cpp  main.cpp
challenge-2/src/utils/: image_manipulation.cpp  matrix_utils.cpp  matrix_utils.hpp
src/: challange2.cpp  main.cpp
